Fix start button flicker on startscreen

--- a/src/css/startScreen.css
+++ b/src/css/startScreen.css
@@ -163,7 +163,7 @@
   box-sizing: border-box;
   /* display: block; */
   z-index: 1003;
-  /* overflow: scroll; */
+  overflow: scroll;
 }
 
 #buyDice {
@@ -197,9 +197,9 @@
 }
 
 #startBtn {
-  position: relative;
-  top: -7.5rem;
-  left: 13rem;
+  position: absolute;
+  bottom: 1rem;
+  right: 25rem;
   font-size: 3rem;
   padding: 1rem;
   border-radius: 15px;
@@ -219,6 +219,7 @@
 }
 .displayBoon {
   border: 1px solid #333;
+  position: relative;
   box-shadow: 1px 1px 1px 1px #222;
   /* height: 10%; */
   /* width: 15%; */
@@ -226,10 +227,12 @@
   /* display: none; */
   padding: 3px;
   text-align: center;
+  /* display: none; */
 }
 
 .displayBoon img{
   /* border: 1px solid black; */
+  position: relative;
   max-width: 80%;
   max-height: 80%;
   /* display: none; */
